Some string and code clean/fixes